syntax = "proto3";

package pb;

service lan_doh {
    rpc GetDirectory (GetDirectoryRequest) returns (GetDirectoryResponse);
    rpc GetFile (GetFileRequest) returns (stream GetFileResponse);
}

message GetDirectoryRequest {
    string name = 1;
}

message GetDirectoryResponse {
    repeated FileMetaData files = 1;
}

message GetFileRequest {
    string path = 1;
    optional uint64 from_bytes = 2;
}

message GetFileResponse {
    repeated uint32 chunk = 1;
}

message FileMetaData {
    uint64 file_size = 1;
    string hash = 2;
    string path = 3;
}